CREATE TABLE "users" (
  "id" INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "email" varchar UNIQUE NOT NULL,
  "password_hash" varchar NOT NULL,
  "role" varchar,
  "created_at" timestamp
);

CREATE TABLE "genomes" (
  "id" INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "name" varchar UNIQUE NOT NULL,
  "species" varchar,
  "reference_version" varchar,
  "created_by" int,
  "created_at" timestamp
);

CREATE TABLE "samples" (
  "id" INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "genome_id" int,
  "donor_id" varchar,
  "collection_date" date,
  "sample_type" varchar,
  "metadata" json,
  "collected_by" int,
  "created_at" timestamp
);

CREATE TABLE "sequence_files" (
  "id" INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "sample_id" int,
  "file_path" varchar,
  "file_type" varchar,
  "checksum" varchar,
  "uploaded_by" int,
  "uploaded_at" timestamp
);

CREATE TABLE "variant_files" (
  "id" INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "sample_id" int,
  "genome_id" int,
  "file_path" varchar,
  "file_type" varchar,
  "checksum" varchar,
  "uploaded_by" int,
  "uploaded_at" timestamp
);

CREATE TABLE "audit_logs" (
  "id" INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "user_id" int,
  "action" varchar,
  "resource_type" varchar,
  "resource_id" int,
  "timestamp" timestamp,
  "details" text
);

COMMENT ON COLUMN "users"."role" IS 'admin, researcher, guest';

COMMENT ON COLUMN "samples"."genome_id" IS 'Reference genome used for alignment';

COMMENT ON COLUMN "samples"."donor_id" IS 'De-identified individual';

COMMENT ON COLUMN "samples"."sample_type" IS 'blood, saliva, tissue, etc.';

COMMENT ON COLUMN "samples"."collected_by" IS 'User who collected or registered the sample';

COMMENT ON COLUMN "sequence_files"."file_type" IS 'FASTQ, BAM, CRAM';

COMMENT ON COLUMN "variant_files"."genome_id" IS 'Compared against this reference genome';

COMMENT ON COLUMN "variant_files"."file_type" IS 'VCF, JSON, GFF';

ALTER TABLE "genomes" ADD FOREIGN KEY ("created_by") REFERENCES "users" ("id");

ALTER TABLE "samples" ADD FOREIGN KEY ("genome_id") REFERENCES "genomes" ("id");

ALTER TABLE "samples" ADD FOREIGN KEY ("collected_by") REFERENCES "users" ("id");

ALTER TABLE "sequence_files" ADD FOREIGN KEY ("sample_id") REFERENCES "samples" ("id");

ALTER TABLE "sequence_files" ADD FOREIGN KEY ("uploaded_by") REFERENCES "users" ("id");

ALTER TABLE "variant_files" ADD FOREIGN KEY ("sample_id") REFERENCES "samples" ("id");

ALTER TABLE "variant_files" ADD FOREIGN KEY ("genome_id") REFERENCES "genomes" ("id");

ALTER TABLE "variant_files" ADD FOREIGN KEY ("uploaded_by") REFERENCES "users" ("id");

ALTER TABLE "audit_logs" ADD FOREIGN KEY ("user_id") REFERENCES "users" ("id");

INSERT INTO "users" (email, password_hash, role, created_at)
VALUES ('admin@example.com', 'admin', 'admin', NOW());
